updated scripts to use correct unified paths

--- a/applied_models/1-CNN/task1.ipynb
+++ b/applied_models/1-CNN/task1.ipynb
@@ -33,7 +33,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from torchvision import datasets, transforms\n",
     "from tqdm.notebook import tqdm\n",
-    "from urllib.request import urlopen"
+    "from urllib.request import urlopen\n"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "device"
+    "device\n"
    ]
   },
   {
@@ -83,7 +83,7 @@
     "    loss.backward()\n",
     "\n",
     "    optimizer.step()\n",
-    "    return loss.cpu().item()"
+    "    return loss.cpu().item()\n"
    ]
   },
   {
@@ -104,7 +104,7 @@
     "        epoch_loss += batch_loss*len(batch_of_x)\n",
     "        total += len(batch_of_x)\n",
     "\n",
-    "    return epoch_loss/total"
+    "    return epoch_loss/total\n"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "                    optimizer=optima,\n",
     "                    callback=callback)\n",
     "\n",
-    "        iterations.set_postfix({'train epoch loss': epoch_loss})"
+    "        iterations.set_postfix({'train epoch loss': epoch_loss})\n"
    ]
   },
   {
@@ -150,12 +150,12 @@
     "class CNNParametrizable(torch.nn.Module):\n",
     "    __DEFAULT_IS_POOLING__ : bool = True\n",
     "    __DEFAULT_BATCHNORM__  : bool = False\n",
-    "    \n",
+    "\n",
     "    __DEFAULT_DROPOUT__ : float = -1.0\n",
-    "    \n",
+    "\n",
     "    __DEFAULT_CONV_LAYERS__   : int = 2\n",
     "    __DEFAULT_LINEAR_LAYERS__ : int = 3\n",
-    "    \n",
+    "\n",
     "    __DEFAULT_CONV_SIZE__    : list[int] = [5]*__DEFAULT_CONV_LAYERS__\n",
     "    __DEFAULT_POOLING_SIZE__ : list[int] = [2]*__DEFAULT_CONV_LAYERS__\n",
     "    __DEFAULT_CONV_CHANNELS_ : list[int] = [1, 6, 16]\n",
@@ -304,7 +304,7 @@
     "        return True, \"Compatable!\"\n",
     "\n",
     "    def forward(self, input):\n",
-    "        return self.layers(input)"
+    "        return self.layers(input)\n"
    ]
   },
   {
@@ -359,7 +359,7 @@
     "    conv_sz=[5, 5, 3],\n",
     "    add_batchnorm=True,\n",
     "    dropout=0.3)\n",
-    "my_model.to(device)"
+    "my_model.to(device)\n"
    ]
   },
   {
@@ -369,7 +369,7 @@
    "outputs": [],
    "source": [
     "MNIST_train = datasets.MNIST('./mnist', train=True, download=True, transform=transforms.ToTensor())\n",
-    "MNIST_test = datasets.MNIST('./mnist', train=False, download=True, transform=transforms.ToTensor())"
+    "MNIST_test = datasets.MNIST('./mnist', train=False, download=True, transform=transforms.ToTensor())\n"
    ]
   },
   {
@@ -419,7 +419,7 @@
     "\n",
     "            self.writer.add_text('REPORT/test', str(classification_report(real, pred)), self.step)\n",
     "    def __call__(self, model, loss):\n",
-    "        return self.forward(model, loss)"
+    "        return self.forward(model, loss)\n"
    ]
   },
   {
@@ -429,7 +429,7 @@
    "outputs": [],
    "source": [
     "loss_function = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam"
+    "optimizer = torch.optim.Adam\n"
    ]
   },
   {
@@ -438,8 +438,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer = SummaryWriter(log_dir='experiment')\n",
-    "call = callback(writer, MNIST_test, loss_function, delimeter=10)"
+    "writer = SummaryWriter(log_dir='tensorboard')\n",
+    "call = callback(writer, MNIST_test, loss_function, delimeter=10)\n"
    ]
   },
   {
@@ -540,7 +540,7 @@
     "        loss_function=loss_function,\n",
     "        optimizer=optimizer,\n",
     "        lr=0.001,\n",
-    "        callback=call)"
+    "        callback=call)\n"
    ]
   },
   {
@@ -594,7 +594,7 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir experiment/ --port 6009"
+    "%tensorboard --logdir tensorboard/ --port 6009\n"
    ]
   },
   {
@@ -630,7 +630,7 @@
     "\n",
     "test_loss /= len(MNIST_test)\n",
     "\n",
-    "print('loss: {}'.format(test_loss))"
+    "print('loss: {}'.format(test_loss))\n"
    ]
   },
   {
