--- a/applied_models/6-fasttext/task6.ipynb
+++ b/applied_models/6-fasttext/task6.ipynb
@@ -26,7 +26,7 @@
       "source": [
         "# !wget get https://dl.fbaipublicfiles.com/fasttext/vectors-crawl/cc.ru.300.bin.gz\n",
         "import torch\n",
-        "torch.cuda.is_available()"
+        "torch.cuda.is_available()\n"
       ]
     },
     {
@@ -46,7 +46,7 @@
         "# %cd fastText\n",
         "# !pip install .\n",
         "# !cp fasttext ../\n",
-        "# %cd .."
+        "# %cd ..\n"
       ]
     },
     {
@@ -58,7 +58,7 @@
       "outputs": [],
       "source": [
         "import fasttext\n",
-        "# !gunzip cc.ru.300.bin.gz"
+        "# !gunzip cc.ru.300.bin.gz\n"
       ]
     },
     {
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "ft = fasttext.load_model('/mnt/e/WindowsFolders/Desktop/wsl/6ml/cc.ru.300.bin')"
+        "ft = fasttext.load_model('cc.ru.300.bin')\n"
       ]
     },
     {
@@ -92,7 +92,7 @@
       ],
       "source": [
         "# fasttext.util.reduce_model(ft, 100)\n",
-        "ft.get_dimension()"
+        "ft.get_dimension()\n"
       ]
     },
     {
@@ -101,7 +101,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# ft.save_model('cc.ru.100.bin')"
+        "# ft.save_model('cc.ru.100.bin')\n"
       ]
     },
     {
@@ -118,7 +118,7 @@
         "\n",
         "from sklearn.metrics import classification_report\n",
         "from torch.utils.tensorboard import SummaryWriter\n",
-        "from tqdm.notebook import tqdm"
+        "from tqdm.notebook import tqdm\n"
       ]
     },
     {
@@ -143,7 +143,7 @@
         "#                   else ['[CLS]']+s[:max_length]+['[SEP]'] \\\n",
         "#                   for s in tokens ]\n",
         "#         vectors = [[self.ft.get_word_vector(w) for w in sent] for sent in tokens]\n",
-        "#         return torch.tensor(vectors)"
+        "#         return torch.tensor(vectors)\n"
       ]
     },
     {
@@ -171,7 +171,7 @@
       ],
       "source": [
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-        "device"
+        "device\n"
       ]
     },
     {
@@ -197,7 +197,7 @@
       "source": [
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
-        "!pip install nerus"
+        "!pip install nerus\n"
       ]
     },
     {
@@ -314,7 +314,7 @@
         "    loss.backward()\n",
         "\n",
         "    optimizer.step()\n",
-        "    return loss.cpu().item()"
+        "    return loss.cpu().item()\n"
       ]
     },
     {
@@ -340,7 +340,7 @@
         "        epoch_loss += batch_loss*len(batch_of_x)\n",
         "        total += len(batch_of_x)\n",
         "\n",
-        "    return epoch_loss/total"
+        "    return epoch_loss/total\n"
       ]
     },
     {
@@ -377,7 +377,7 @@
         "                    optimizer=optima,\n",
         "                    callback=callback)\n",
         "\n",
-        "        iterations.set_postfix({'train epoch loss': epoch_loss})"
+        "        iterations.set_postfix({'train epoch loss': epoch_loss})\n"
       ]
     },
     {
@@ -417,7 +417,7 @@
         "\n",
         "    # need to mask and remove from real tags PAD, CLS, SEP, they are needed only to support LSTM architecture\n",
         "    mask = np.isin(real, [0, 1, 2], invert=True)\n",
-        "    return classification_report(real[mask], pred[mask]), test_loss / total_samples"
+        "    return classification_report(real[mask], pred[mask]), test_loss / total_samples\n"
       ]
     },
     {
@@ -450,7 +450,7 @@
         }
       ],
       "source": [
-        "# !wget https://storage.yandexcloud.net/natasha-nerus/data/nerus_lenta.conllu.gz"
+        "# !wget https://storage.yandexcloud.net/natasha-nerus/data/nerus_lenta.conllu.gz\n"
       ]
     },
     {
@@ -466,7 +466,7 @@
         "\n",
         "MAX_SAMPLES = 1000\n",
         "\n",
-        "dataset = head(load_nerus(\"/mnt/e/WindowsFolders/Desktop/wsl/6ml/nerus_lenta.conllu.gz\"), MAX_SAMPLES)\n"
+        "dataset = head(load_nerus(\"nerus_lenta.conllu.gz\"), MAX_SAMPLES)\n"
       ]
     },
     {
@@ -604,7 +604,7 @@
         "\n",
         "dataset_words_id = []\n",
         "dataset_tags_id = []\n",
-        "dataset = head(load_nerus(\"/mnt/e/WindowsFolders/Desktop/wsl/6ml/nerus_lenta.conllu.gz\"), MAX_SAMPLES)\n",
+        "dataset = head(load_nerus(\"nerus_lenta.conllu.gz\"), MAX_SAMPLES)\n",
         "for i, sample in enumerate(dataset):\n",
         "    words_id, tags = nerus_tokenizer.tokenize_sent_pos_tagging(sample.sents)\n",
         "    tags_id = nerus_tokenizer.tokenize_pos_tags(tags)\n",
@@ -614,7 +614,7 @@
         "\n",
         "print(nerus_tokenizer.ids_to_word)\n",
         "print(nerus_tokenizer.tag_to_id)\n",
-        "print(f\"Tokenized: {dataset_words_id[0][0]}\")"
+        "print(f\"Tokenized: {dataset_words_id[0][0]}\")\n"
       ]
     },
     {
@@ -639,7 +639,7 @@
       "source": [
         "print(nerus_tokenizer.tag_to_id)\n",
         "# print(nerus_tokenizer.id_)\n",
-        "#print(dataset_tags_id)"
+        "#print(dataset_tags_id)\n"
       ]
     },
     {
@@ -671,7 +671,7 @@
         "test_dataset_pt = torch.utils.data.TensorDataset(words_test, tags_test.long())\n",
         "\n",
         "print(tags_tensor.shape)\n",
-        "print(sents_tensor.shape)"
+        "print(sents_tensor.shape)\n"
       ]
     },
     {
@@ -738,7 +738,7 @@
         "               f\"_layers_num={self.num_layers}\" +    \\\n",
         "               f\"_bidirect={int(self.biderect)}\" +   \\\n",
         "               f\"_dropout={self.dropout}\" +          \\\n",
-        "               f\"_batchnorm={int(self.batchnorm)}\""
+        "               f\"_batchnorm={int(self.batchnorm)}\"\n"
       ]
     },
     {
@@ -771,7 +771,7 @@
         "            self.writer.add_text(f'METRICS/{model}', str(model_metrics), self.step)\n",
         "\n",
         "    def __call__(self, model, loss):\n",
-        "        return self.forward(model, loss)"
+        "        return self.forward(model, loss)\n"
       ]
     },
     {
@@ -789,7 +789,7 @@
         "config['num_layers'] = 2\n",
         "config['bidirectional'] = False\n",
         "config['batchnorm'] = False\n",
-        "config['p'] = 0.2"
+        "config['p'] = 0.2\n"
       ]
     },
     {
@@ -1064,7 +1064,7 @@
         "loss_function = torch.nn.CrossEntropyLoss(ignore_index=nerus_tokenizer.tag_to_id[\"[PAD]\"])\n",
         "optimizer = torch.optim.Adam\n",
         "\n",
-        "writer = SummaryWriter(log_dir=f'/mnt/e/WindowsFolders/Desktop/wsl/6ml/tensorboard/layer_width/testtrain')\n",
+        "writer = SummaryWriter(log_dir=f'tensorboard/layer_width/testtrain')\n",
         "nerus_callback = TensorboardCallback(writer, test_dataset_pt, loss_function)\n",
         "\n",
         "trainer(count_of_epoch=10,\n",
@@ -1074,7 +1074,7 @@
         "    loss_function=loss_function,\n",
         "    optimizer=optimizer,\n",
         "    lr=0.001,\n",
-        "    callback=nerus_callback)"
+        "    callback=nerus_callback)\n"
       ]
     },
     {
@@ -1085,7 +1085,7 @@
       },
       "outputs": [],
       "source": [
-        "device"
+        "device\n"
       ]
     },
     {
@@ -1134,7 +1134,7 @@
         }
       ],
       "source": [
-        "%tensorboard --logdir /mnt/e/WindowsFolders/Desktop/wsl/6ml/tensorboard/layer_width/testtrain"
+        "%tensorboard --logdir tensorboard/layer_width/testtrain\n"
       ]
     },
     {
@@ -1196,7 +1196,7 @@
       ],
       "source": [
         "model.eval()\n",
-        "test_data = ['[CLS]', \n",
+        "test_data = ['[CLS]',\n",
         " 'Вице-премьер', 'по', 'социальным', 'вопросам', 'Татьяна', 'Голикова', 'рассказала', ',', 'в', 'каких', 'регионах', 'России', 'зафиксирована', 'наиболее', 'высокая', 'смертность', 'от', 'рака', ',', 'сообщает', 'РИА', 'Новости', '.',\n",
         "\n",
         " '[SEP]']\n",
@@ -1213,7 +1213,7 @@
         "#print([nerus_tokenizer.ids_to_word[int(i)] for i in output]\n",
         "#print([nerus_tokenizer.ids_to_word[int(i)] for i in output])\n",
         "\n",
-        "model.train()"
+        "model.train()\n"
       ]
     },
     {
