minor QoL changes

--- a/applied_models/5-img-annotations/plot.ipynb
+++ b/applied_models/5-img-annotations/plot.ipynb
@@ -55,11 +55,12 @@
    "outputs": [],
    "source": [
     "losses = []\n",
-    "for fname in ['2.log', '4.log']:\n",
-    "    with open('./' + fname, 'r') as f:\n",
-    "        for l in f:\n",
-    "            if (loss_match := re.search(r'Loss: (\\d+\\.\\d+)', l)):\n",
-    "                losses.append(float(loss_match.group(1)))\n"
+    "fname = \"train.log\"\n",
+    "\n",
+    "with open('./' + fname, 'r') as f:\n",
+    "    for l in f:\n",
+    "        if (loss_match := re.search(r'Loss: (\\d+\\.\\d+)', l)):\n",
+    "            losses.append(float(loss_match.group(1)))\n"
    ]
   },
   {
